<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="100">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:weightSum="100"
            >

            <Button
                android:id="@+id/button_Page_Minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/clear"
                android:fontFamily="@font/kosugimaru_regular"
                android:gravity="left|center_vertical"
                android:text="@string/button_Page_Minus"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.github.mikephil.charting.charts.BarChart>

            <Button
                android:id="@+id/button_Page_Pluss"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/clear"
                android:fontFamily="@font/kosugimaru_regular"
                android:gravity="right|center_vertical"
                android:text="@string/button_Page_Pluss"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:weightSum="100"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4.5" />

            <TextView
                android:id="@+id/textView_AchievementCount"
                android:fontFamily="@font/kosugimaru_regular"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60.5"
                android:gravity="left|center_vertical"
                android:textColor="@color/main"
                android:text="@string/textView_AchievementCount" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5" />

            <Button
                android:id="@+id/button_return"
                android:fontFamily="@font/kosugimaru_regular"
                android:layout_width="0dp"
                android:background="@drawable/shape_rounded_corners"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:layout_weight="30"
                android:text="@string/textView_return" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="49"
            android:background="@color/bg"
            android:numColumns="6"
            android:headerDividersEnabled="true"
            android:verticalSpacing="4dp"
            android:horizontalSpacing="4dp"
            android:paddingTop="7dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            tools:listitem="@layout/recode_cell"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>